--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="bimg">
-            <img src="C:\Users\Parath Kumar singh\programming\html\netflix\tv.png" id="first_child">
+            <img src="tv.png" id="first_child">
             <video src="C:\Users\Parath Kumar singh\programming\html\netflix\video-tv-in-0819.m4v" id="second_child" autoplay loop muted></video>
 
         </div>
