--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="main">
         <nav>
             <span>
-                <img src="C:\Users\Parath Kumar singh\programming\html\netflix\logo.svg" class="logo">
+                <img src="logo.svg" class="logo">
             </span>
             <div class="search">
                 <button class="b1">
-                    <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\english.svg"></span>
+                    <span><img src="english.svg"></span>
                     <span>English</span>
-                    <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\english2.svg"></span>
+                    <span><img src="english2.svg"></span>
                 </button>
                 <button class="b2">
                     Sign In
@@ -63,7 +63,7 @@
 
         <div class="bimg">
             <img src="tv.png" id="first_child">
-            <video src="C:\Users\Parath Kumar singh\programming\html\netflix\video-tv-in-0819.m4v" id="second_child" autoplay loop muted></video>
+            <video src="video-tv-in-0819.m4v" id="second_child" autoplay loop muted></video>
 
         </div>
     </div>
@@ -74,7 +74,7 @@
 
     <div class="cpage">
         <div class="cimg" id="c_img">
-            <img src="C:\Users\Parath Kumar singh\programming\html\netflix\mobile-0819.jpg" id="img_c">
+            <img src="mobile-0819.jpg" id="img_c">
             <!-- <video src="c:\Users\Parath Kumar singh\Downloads\video\video-tv-in-0819.m4v"></video> -->
 
         </div>
@@ -97,8 +97,8 @@
         </div>
 
         <div class="dimg" id="dimg">
-            <video src="C:\Users\Parath Kumar singh\programming\html\netflix\video-devices-in.m4v" id="video_d"   autoplay loop muted></video>
-            <img src="C:\Users\Parath Kumar singh\programming\html\netflix\device-pile-in.png" id="photo_d">
+            <video src="video-devices-in.m4v" id="video_d"   autoplay loop muted></video>
+            <img src="Cdevice-pile-in.png" id="photo_d">
 
 
         </div>
@@ -110,7 +110,7 @@
     <div class="epage">
         <div class="eimg"  id="e_img">
 
-            <img src="C:\Users\Parath Kumar singh\programming\html\netflix\AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png"
+            <img src="AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png"
                 class="img_e" id="img_e">
             <!-- <video src="c:\Users\Parath Kumar singh\Downloads\video\video-tv-in-0819.m4v"></video> -->
 
@@ -140,27 +140,27 @@
             </div>
             <div class="box1">
                 <span>How much does Nestflix cost? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
             <div class="box1">
                 <span>Where can I watch? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
             <div class="box1">
                 <span>How do i cancel? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
             <div class="box1">
                 <span>What can I watch on Netflix? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
             <div class="box1">
                 <span>Is netflix good for kids? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
 
@@ -237,9 +237,9 @@
                 Only on Netflix</span>
        
         <button class="button1">
-            <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\english.svg"></span>
+            <span><img src="english.svg"></span>
             <span>English</span>
-            <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\english2.svg"></span>
+            <span><img src="english2.svg"></span>
         </button>
         <span class="india">Netflix India</span>
     </div>
