--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="dimg" id="dimg">
             <video src="video-devices-in.m4v" id="video_d"   autoplay loop muted></video>
-            <img src="Cdevice-pile-in.png" id="photo_d">
+            <img src="device-pile-in.png" id="photo_d">
 
 
         </div>
@@ -135,7 +135,7 @@
 
             <div class="box1">
                 <span>What is Netflix? </span>
-                <span><img src="C:\Users\Parath Kumar singh\programming\html\netflix\plus.svg" color="white"
+                <span><img src="plus.svg" color="white"
                         fill="white"></span>
             </div>
             <div class="box1">
