--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="icon" href="C:\Users\Parath Kumar singh\programming\html\netflix\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="index.css">
 </head>
 
